  was set to ``True`` and an anon user had ``cms_edit`` set to ``True`` on their session.
* Fixed a regression which prevented users from overriding content in an inherited
  placeholder.
* Added official support for Django 1.10.
* Fixed a bug where plugin save would incorrectly be triggered on pressing
  command and then enter in Firefox.
* fix template inheritance setting creates spurious migration (see #3479)
* Fixed a bug which prevented the page from being marked as dirty (pending changes)
  when changing the value of the overwrite url field.
* Adjusted ajax calls triggered when performing a placeholder operation (add plugin, etc..) to include
  a GET query called cms_path. This query points to the path where the operation originates from.
* Added a deprecation warning to method ``render_plugin()`` in class ``CMSPluginBase``.
* Since ``get_parent_classes()`` became a classmethod, do not instantiate plugin before invocation.


=== 3.4.1 (2016-10-04) ===

* Fixed a regression when static placeholder was uneditable if it was present
  on the page multiple times
* Removed globally unique constraint for Apphook configs.
* Fixed a bug when keyboard shortcuts were triggered when form fields were
  focused
* Fixed a bug when ``shift + space`` shortcut wouldn't correctly highlight a
  plugin in the structure board
* Fixed a bug when plugins that have top-level svg element would break
  structure board
* Fixed a bug where output from the ``show_admin_menu_for_pages`` template tag
  was escaped in Django 1.9
* Fixed a bug where plugins would be rendered as editable if toolbar was shown
  but user was not in edit mode.
* Fixed css reset issue with shortcuts modal


=== 3.4.0 (2016-09-14) ===

* Changed the way CMS plugins are rendered. The div with `cms-plugin` class is
  no longer rendered around every CMS plugin, instead a combination of `template`
  tags and JavaScript is used to add event handlers and plugin data directly to